workin in image

--- a/app/view/restaurante-add.html
+++ b/app/view/restaurante-add.html
@@ -18,7 +18,7 @@
         <span *ngIf="!descripcion.valid">Este campo es obligatorio</span>
     </p>
 
-    <label for="">Nombre:</label>
+    <label>Precio:</label>
     <p>
         <select (change)="callPrecio(precio.value)" #precio required>
             <option value="bajo">Bajo</option>
@@ -27,5 +27,9 @@
         </select>
     </p>
 
+    <label>Subir Archivo</label>
+    <p>
+        <input type="file" placeholder="subir imagen">
+    </p>
     <input type="submit" value="Crear Restaurante" [disabled]="!formRestaurante.form.valid">
 </form>
